--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ setenv =
        PYTHONDONTWRITEBYTECODE=1
 deps =
        coverage
+       django-filter>=2.2.0
        django1.9: Django>=1.9,<1.10
        django1.10: Django>=1.10,<1.11
        django1.11: Django>=1.11,<2.0
